--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,4 @@
 server.port=8082
 spring.application.name=MySecondTestAppSpringBoot
+logging.level.org.springframework = ERROR
+logging.level.ru.sokolov = DEBUG
